--- a/Signal Processing/DFT - Illustration.ipynb
+++ b/Signal Processing/DFT - Illustration.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Discrete Fourier Transform\n",
-    "\n",
-    "Reference: [YouTube: Coding Adventure: Sound (and the Fourier Transform)](https://youtu.be/iA6wRgwl7k0)"
+    "# Discrete Fourier Transform"
    ]
   },
   {
